[gd_scene load_steps=5 format=3 uid="uid://dk5yuef32l7g0"]

[ext_resource type="Texture2D" uid="uid://cxsncvgy80jj3" path="res://assets/login_page/background/env_ (18).png" id="1_bofgg"]
[ext_resource type="Script" path="res://main/login_page.gd" id="1_mxg48"]
[ext_resource type="Script" path="res://main/StatusPanel.gd" id="3_814p4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qcpup"]

[node name="LoginPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxg48")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1_bofgg")

[node name="LoginPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 416.0
offset_right = 960.0
offset_bottom = 710.0

[node name="UsernameContainer" type="HBoxContainer" parent="LoginPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 608.0
offset_bottom = 88.0

[node name="UsernameLabel" type="Label" parent="LoginPanel/UsernameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Email:        "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="LoginPanel/UsernameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "请输入正确格式的邮箱地址"

[node name="PasswordContainer" type="HBoxContainer" parent="LoginPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = 112.0
offset_right = 608.0
offset_bottom = 176.0

[node name="PasswordLabel" type="Label" parent="LoginPanel/PasswordContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Password:"

[node name="Password" type="LineEdit" parent="LoginPanel/PasswordContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "请输入至少8位数密码"

[node name="StatusPanel" type="PanelContainer" parent="LoginPanel"]
layout_mode = 0
offset_left = 32.0
offset_top = -80.0
offset_right = 608.0
offset_bottom = -40.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_qcpup")
script = ExtResource("3_814p4")

[node name="StatusLabel" type="Label" parent="LoginPanel/StatusPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
horizontal_alignment = 1
vertical_alignment = 1

[node name="RegisterLogin" type="Button" parent="LoginPanel"]
layout_mode = 0
offset_left = 240.0
offset_top = 216.0
offset_right = 400.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 32
text = "注册/登录"

[node name="TitlePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 200.0
offset_right = 896.0
offset_bottom = 256.0

[node name="TitleLabel" type="Label" parent="TitlePanel"]
layout_mode = 0
offset_left = 96.0
offset_right = 416.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 40
text = "欢迎来到水怪地城"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_submitted" from="LoginPanel/PasswordContainer/Password" to="." method="_on_password_text_submitted"]
[connection signal="button_down" from="LoginPanel/RegisterLogin" to="." method="_on_register_login_button_down"]
